# rabbitmq-messaging

./: .gitignore  Dockerfile.flask-app  Dockerfile.rabbitmq  README.md  bootstrap.py  docker-compose.yaml  pyproject.toml  tasks.py  tenant-config.ini
src/alaya/demo/: app.py
src/alaya/events/: __init__.py  consumer.py  db.py  outbox.py  utils.py
src/alaya/nabu/: __init__.py
