[tool.poetry]
name = "rabbitmq-events"
version = "0.1.0"
description = ""
authors = ["Joaquin Rodriguez <jrhuerta@alayacare.com>"]
packages = [
    { include = "alaya", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
librabbitmq = "^2.0.0"
SQLAlchemy = "^1.4.31"
Flask = "^2.0.3"
asyncclick = "^8.0.3"
anyio = "^3.5.0"
aiomysql = "^0.0.22"
asyncpg = "^0.25.0"
aio-pika = "^7.1.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
mysqlclient = "^2.1.0"
psycopg2 = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
